# tarantool-module

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS.MD  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PROJECT  README.md  README_RUS.md  deploy.sh  go.mod  go.sum  main.go
.github/workflows/: Synchronization.yml  destroy-deployment.yml  pull-translation.yml  push-translation.yml  test.yml  upload-translations.yml
.gitlab/issue_templates/: bug_report.md
.gitlab/merge_request_templates/: default.md
api/v1alpha1/: cluster_types.go  groupversion_info.go  replicasettemplate_types.go  role_types.go  zz_generated.deepcopy.go
charts/crud/: README.md
ci/dev/: kubernetes.toml
ci/helm-chart/: .helmignore  Chart.yaml  values.yaml
ci/master/: kubernetes.toml
cmd/manager/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml
config/manager/: controller_manager_config.yaml  kustomization.yaml
config/manifests/: kustomization.yaml
config/rbac/: cluster_editor_role.yaml  cluster_viewer_role.yaml  replicasettemplate_editor_role.yaml  replicasettemplate_viewer_role.yaml  role.yaml  role_editor_role.yaml  (+1 more)
controllers/: cluster_controller.go  cluster_controller_test.go  replicasettemplate_controller.go  role_controller.go  role_controller_test.go  suite_test.go
deploy/: operator.yaml  role.yaml  role_binding.yaml
doc/: README.md  cleanup.py  conf.py  crowdin.yaml  requirements.txt
docker/: ci-log-section  picodata.Dockerfile  vanila.Dockerfile  vanilla.Dockerfile
examples/: README.md  async.rs
examples/all_procs/: Cargo.toml
examples/all_procs/src/: init.lua  lib.rs
examples/async-h1-client/: Cargo.toml  README.md
examples/async-h1-client/src/: init.lua  lib.rs
examples/cluster_node/: Cargo.toml  cluster_node.lua
examples/cluster_node/src/: lib.rs
examples/demo/: Cargo.toml  demo.lua  slides.md
examples/demo/slides/: 000.md  010.md  012.md  013.md  014.md  016.md  018.md  019.md  020.md  022.md  024.md  026.md  028.md  030.md  032.md  034.md  036.md  038.md  040.md  042.md  044.md  050.md  060.md  070.md  080.md  090.md  100.md  105.md  110.md  120.md  130.md  140.md  150.md  160.md  170.md  180.md  190.md  200.md  210.md  slideshow.sh
examples/demo/src/: lib.rs
examples/easy/: Cargo.toml  init.lua
examples/easy/src/: lib.rs
examples/tokio-hyper/: Cargo.toml  README.md
examples/tokio-hyper/src/: init.lua  lib.rs
hack/: boilerplate.go.txt
hlua/: Cargo.toml  README.md
hlua/hlua/: Cargo.toml
hlua/hlua/src/: any.rs  common_calls.rs  debug.rs  ffi.rs  functions_write.rs  lib.rs  lua_functions.rs  lua_tables.rs  macros.rs  reflection.rs  rust_tables.rs  tuples.rs  userdata.rs  values.rs  yego.rs
hlua/hlua/tests/: userdata.rs
hlua/hluaderived/: Cargo.toml  hlua_derived.rs  hlua_derived.rs.bak
perf-test/: Cargo.toml  run.lua
perf-test/src/: lib.rs
set-error-test/: Cargo.toml  run.lua
src/: c_api.rs  clock.rs  coio.rs  error.rs  fiber.rs  index.rs  latch.rs  lib.rs  log.rs  net_box.rs  schema.rs  sequence.rs  session.rs  space.rs  transaction.rs  tuple.rs
tarantool/: Cargo.toml
tarantool-derive/: Cargo.toml
tarantool-derive/src/: lib.rs
tarantool-helm/: Chart.yaml
tarantool-proc/: Cargo.toml
tarantool-proc/src/: lib.rs  test.rs
tarantool/src/: access_control.rs  auth.rs  clock.rs  coio.rs  datetime.rs  decimal.rs  define_str_enum.rs  error.rs  fiber.rs  index.rs  lib.rs  log.rs  msgpack.rs  proc.rs  read_view.rs  region.rs  sequence.rs  session.rs  space.rs  sql.rs  test.rs  test_utils.rs  time.rs  transaction.rs  trigger.rs  tuple.rs  util.rs  uuid.rs  va_list.rs  vclock.rs
tarantool/src/async/: future.rs  mod.rs
tarantool/src/cbus/: mod.rs  oneshot.rs  unbound.rs  unbounded.rs
tarantool/src/cbus/sync/: mod.rs  std.rs  tokio.rs
tarantool/src/ffi/: datetime.rs  decimal.rs  helper.rs  lua.rs  mod.rs  sql.rs  tarantool.rs  uuid.rs
tarantool/src/ffi/bindings/: README.md  gen.rs  manual.rs  mod.rs
tarantool/src/fiber/: async.rs  channel.rs  csw.rs  future.rs  mod.rs  mutex.rs  safety.rs
tarantool/src/fiber/async/: mutex.rs  oneshot.rs  timeout.rs  watch.rs
tarantool/src/lua/: mod.rs
tarantool/src/msgpack/: encode.rs
tarantool/src/net_box/: index.rs  inner.rs  mod.rs  options.rs  promise.rs  protocol.rs  recv_queue.rs  schema.rs  send_queue.rs  space.rs
tarantool/src/network/: mod.rs
tarantool/src/network/client/: index.rs  inner.rs  mod.rs  promise.rs  reconnect.rs  recv_queue.rs  space.rs  stream.rs  tcp.rs  tls.rs
tarantool/src/network/protocol/: api.rs  codec.rs  conn.rs  mod.rs  options.rs  send_queue.rs
tarantool/src/raft/: fsm.rs  inner.rs  mod.rs  rpc.rs
tarantool/src/schema/: function.rs  index.rs  mod.rs  sequence.rs  space.rs
tarantool/test/: run.rs
tests/: Cargo.toml  README.md  run-tests.lua  run.rs  run_benchmarks.lua  run_tests.lua  test.sh
tests/src/: access_control.rs  auth.rs  bench.rs  bench_bulk_insert.lua  bench_bulk_insert.rs  bench_server.lua  benchmarks.rs  box.rs  cbus.rs  coio.rs  common.rs  datetime.rs  decimal.rs  define_str_enum.rs  enums.rs  ephemeral.rs  error.rs  latch.rs  lib.rs  log.rs  net_box.rs  proc.rs  raft.rs  session.rs  sql.rs  test_attr.rs  test_box.rs  test_coio.rs  test_error.rs  test_fiber.rs  test_latch.rs  test_log.rs  test_net_box.rs  test_raft.rs  test_session.rs  test_transaction.rs  test_tuple.rs  transaction.rs  tuple.rs  tuple_picodata.rs  (+1 more)
tests/src/fiber/: async.rs  channel.rs  future.rs  mod.rs  mutex.rs  old.rs
tests/src/hlua/: any.rs  functions_write.rs  lua_functions.rs  lua_tables.rs  misc.rs  mod.rs  rust_tables.rs  userdata.rs  values.rs
tests/src/tlua/: any.rs  functions_write.rs  lua_functions.rs  lua_tables.rs  misc.rs  mod.rs  object.rs  rust_tables.rs  userdata.rs  values.rs
tlua/: Cargo.toml  README.md
tlua-derive/: Cargo.toml
tlua-derive/src/: function.rs  lib.rs
tlua/src/: any.rs  cdata.rs  debug.rs  ffi.rs  functions_write.rs  lib.rs  lua_functions.rs  lua_tables.rs  macros.rs  object.rs  rust_tables.rs  test.rs  tuples.rs  userdata.rs  util.rs  values.rs
version/: version.go
(+227 files in other folders)
