[workspace]
members = [
    "tarantool",
    "tarantool-proc",
    "tlua",
    "tlua-derive",
    "tests",
    "examples/all_procs",
    "examples/easy",
    "examples/harder",
    "examples/hardest",
    "examples/read",
    "examples/write",
    "examples/tokio-hyper",
    "examples/luaopen",
    "perf-test"
]
