[package]
name = "perf-test"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarantool = { path = "../tarantool", features = [ "internal_test" ] }
serde = { version = "*", features = ["derive"] }
rmp-serde = "1"

[lib]
crate-type = ["cdylib"]
