[package]
authors = [
    "Georgy Moshkin <gmoshkin@picodata.io>",
]
name = "tarantool-proc"
description = "Tarantool proc macros"
version = "2.0.0"
edition = "2021"
license = "BSD-2-Clause"
documentation = "https://docs.rs/tarantool-proc/"
repository = "https://github.com/picodata/tarantool-module"
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = [ "full", "extra-traits" ] }
quote = "^1.0"
proc-macro2 = "^1.0"
darling = "0.14.2"
proc-macro-error = "1"
