[package]
name = "tarantool"
description = "Tarantool rust bindings"
version = "3.0.0"
authors = [
    "Dmitriy Koltsov <dkoltsov@picodata.io>",
    "Georgy Moshkin <gmoshkin@picodata.io>",
    "Anton Melnikov <volt0@picodata.io>",
    "Egor Ivkov <e.ivkov@picodata.io>",
]
edition = "2018"
license = "BSD-2-Clause"
readme = "../README.md"
documentation = "https://docs.rs/tarantool/"
repository = "https://github.com/picodata/tarantool-module"
keywords = ["ffi", "database", "tarantool"]
categories = ["database"]
rust-version = "1.67.1"

[dependencies]
base64 = "0.13"
bitflags = "1.2"
byteorder = "1.3"
dlopen = "0.1.8"
dec = "0.4.8"
thiserror = "1.0.30"
libc = "0.2"
log = "0.4"
nix = "0.24.1"
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.4.0"
tlua = { path = "../tlua", version = "2.0.0" }
refpool = { version = "0.4.3", optional = true }
rmp = "=0.8.11"
rmp-serde = "=1.0.0"
rmpv = { version = "=1.0.0", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "^0"
sha-1 = "0.9"
tarantool-proc = { path = "../tarantool-proc", version = "0.2.2" }
uuid = "0.8.2"
futures = "0.3.25"
linkme = "0.2.10"
async-trait = "0.1.64"
tester = { version = "0.7.0", optional = true }
time = ">=0.3.0, <0.3.18"
crossbeam-queue = "0.3.8"
async-std = { version = "1.12.0", optional = true, default_features = false, features = ["std"] }

[target.'cfg(not(all(target_arch = "aarch64", target_os = "macos")))'.dependencies]
va_list = "0.1.3"

[features]
default = ["net_box", "network_client"]
net_box = ["refpool"]
picodata = []
network_client = []
test = ["tester"]
all = ["default", "test"]
internal_test = ["test", "tlua/test"]

[dev-dependencies]
time-macros = "=0.2.6"
