[package]
name = "tarantool-module-test-runner"
version = "0.1.0"
authors = [
    "Dmitriy Koltsov <dkoltsov@picodata.io>",
    "Anton Melnikov <volt0@picodata.io>"
]
edition = "2018"
license = "BSD-2-Clause"

[dependencies]
log = "0.4.11"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tester = "0.7.0"

[dependencies.tarantool-module]
path = ".."

[lib]
crate-type = ["cdylib"]
