[package]
authors = [
    "Georgy Moshkin <gmoshkin@picodata.io>",
]
name = "tlua-derive"
description = "Picolua derive macro definitions"
version = "0.1.0"
edition = "2018"
license = "BSD-2-Clause"
documentation = "https://docs.rs/tlua-derive/"
repository = "https://github.com/picodata/tarantool-module"

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
syn = "^1.0"
quote = "^1.0"
proc-macro2 = "^1.0"

