[package]
authors = [
    "Georgy Moshkin <gmoshkin@picodata.io>",
]
name = "tlua-derive"
description = "Tlua derive macro definitions"
version = "0.1.3"
edition = "2018"
license = "BSD-2-Clause"
documentation = "https://docs.rs/tlua-derive/"
repository = "https://github.com/picodata/tarantool-module"
rust-version = "1.59"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.98", features = ["visit"] }
quote = "^1.0"
proc-macro2 = "^1.0"

