[package]
name = "tlua"
version = "0.6.5"
edition = "2018"
authors = [
    "pierre.krieger1708@gmail.com",
    "Georgy Moshkin <gmoshkin@picodata.io>",
    "Egor Ivkov <e.ivkov@picodata.io>",
]
description = "Zero-cost high-level wrapper for Tarantool-LuaJIT"
keywords = ["lua"]
repository = "https://github.com/picodata/tarantool-module"
documentation = "http://docs.rs/tlua"
license = "MIT"
rust-version = "1.61"

[dependencies]
libc = "0.2"
tlua-derive = { path = "../tlua-derive", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
linkme = { version = "0.2.10", optional = true }
tester = { version = "0.7.0", optional = true }

[features]
test = ["linkme", "tester"]
