[package]
name = "all_procs"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tarantool]
path = "../../tarantool"
features = ["stored_procs_slice"]

[lib]
test = false
crate-type = ["cdylib"]
