[package]
name = "async-h1-client"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
tarantool = { path = "../../tarantool" }
http-types = "2.9.0"
async-h1 = "2.3.3"
async-native-tls = { version = "0.5.0", optional=true }

[features]
tls = ["async-native-tls"]

[lib]
test = false
crate-type = ["cdylib"]
