[package]
name = "cluster_node"
version = "0.1.0"
authors = [
    "Dmitriy Koltsov <dkoltsov@picodata.io>",
    "Anton Melnikov <volt0@picodata.io>"
]
edition = "2018"
license = "BSD-2-Clause"
rust-version = "1.59"

[dependencies]
once_cell = "1.4.0"

[dependencies.tarantool]
path = "../../tarantool"
features = ["raft_node"]

[lib]
test = false
crate-type = ["cdylib"]
