[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tarantool = { path = "../../tarantool", features = ["schema"] }
thiserror = "1"

[lib]
test = false
crate-type = ["cdylib"]
