[package]
name = "easy"
version = "0.1.0"
authors = [
    "Dmitriy Koltsov <dkoltsov@picodata.io>",
    "Anton Melnikov <volt0@picodata.io>"
]
edition = "2018"
license = "BSD-2-Clause"
rust-version = "1.59"

[dependencies.tarantool]
path = "../../tarantool"

[lib]
test = false
crate-type = ["cdylib"]
