[package]
name = "tokio-hyper"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
tarantool = { path = "../../tarantool" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "*"
http-body-util = "0.1.0-rc.2"
env_logger = "0.9.0"
bytes = "*"
serde = "*"
serde_json = "*"

[lib]
test = false
crate-type = ["cdylib"]
